ChatBox: Fixed layout issues

--- a/Frontend/src/components/messages/ChatBox/ChatBox.module.css
+++ b/Frontend/src/components/messages/ChatBox/ChatBox.module.css
@@ -15,6 +15,15 @@
 
 .chatMessagesContainer {
   grid-row-start: 2;
+  grid-row-end: 3;
   grid-column-start: 2;
   grid-column-end: 3;
+  overflow: hidden;
+}
+
+.messageInputContainer {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
 }
